syntax = "proto3";

package rivet.backend.pkg.ip.info;

import "legacy/proto/common.proto";
import "legacy/proto/backend/net.proto";

enum Provider {
	IP_INFO_IO = 0;
}

message Request {
	string ip = 1;
	Provider provider = 2;
}

message Response {
	optional backend.net.IpInfo ip_info = 1;
}
